# letterboxd-friend-check

./: .ai-context.yaml  .aicodex  .bandit  .env.example  .flake8  .gitignore  .security-fixes.md  AI_INTEGRATION_GUIDE.md  CONTRIBUTING.md  CONTRIBUTOR_QUICK_REFERENCE.md  DOCUMENTATION_INDEX.md  ENHANCEMENT_RECOMMENDATIONS.md  GIT_AUTOMATION_GUIDE.md  GIT_SAFE_README.md  LBoxFriendCheck.py  LICENSE  PROJECT_REORGANIZATION.md  PROJECT_SUMMARY.md  PROJECT_SUMMARY_AI.json  README.md  SECURITY.md  SECURITY_REPORT_MANAGEMENT.md  analyze_bandit.py  bandit-final.json  bandit-final2.json  bandit-final3.json  bandit-focused.json  bandit-test.json  build_executable.py  check_bandit.py  commit.ps1  config_template.json  create_clean_repo.py  git-safe.ps1  git_safe.py  movie_database.py  mypy.ini  pre_commit_check.py  prepare_for_production.py  pyproject.toml  (+10 more)
.github/: WORKFLOW_SECURITY_GUIDELINES.md
.github/workflows/: auto-update-docs.yml  code-quality.yml  security.yml  tests.yml
download/: INSTALL.md  README.md  build_info.json  build_info_windows.json
letterboxd_friend_check/: __init__.py  app.py  cli.py  config.py  new_methods.py
letterboxd_friend_check/api/: __init__.py  tmdb.py
letterboxd_friend_check/data/: __init__.py  database.py
letterboxd_friend_check/gui/: __init__.py  menu_methods.py  setup_dialog.py
tests/: __init__.py  test_launcher_graceful_exit.py  test_letterboxd.py
tools/: documentation_maintainer.py  github_bridge.py  github_issues_bridge.py  github_issues_bridge_old.py  lint_check.py  project_status_checker.py  setup_github_repo.py
(+9 files in other folders)
